--- a/vol/templates/vol/index.html
+++ b/vol/templates/vol/index.html
@@ -61,7 +61,7 @@ $(document).ready(function() {
                                             -
                                         {% endif %}</td>
                                      <td>{% if vol.duree_jour %}
-                                            {{ vol.duree_jour_HHmm }}
+                                            {{ vol.duree_jour }}
                                         {% else %}
                                             -
                                         {% endif %}</td>
