--- a/vol/templates/vol/profile.html
+++ b/vol/templates/vol/profile.html
@@ -4,6 +4,7 @@
 
 {{ form.media }}
 {% load widget_tweaks %}
+{% load static %}
 {{ ProfileForm.media }}
 
 {% if user == "AnonymousUser" %}
@@ -22,6 +23,9 @@
         <div class="row">
             <div class="col-md-6 offset-md-3">
                 <h1>{{ user.first_name }} {{ user.last_name }}</h1>
+            </div>
+            <div class="col-md-3">
+                <img src="{% static 'vol/logo-opl.png' %}" alt="My image" height="50">
             </div>
         </div>
         <div class="row">
