uniformisation du header

--- a/vol/templates/vol/pilote_add.html
+++ b/vol/templates/vol/pilote_add.html
@@ -1,4 +1,4 @@
-{% extends 'vol/base.html' %}
+{% extends 'vol/base_homepage.html' %}
 {% block title %} Nouveau pilote {% endblock %}
 {% block content %}
 <div class="row">
