--- a/vol/templates/vol/404.html
+++ b/vol/templates/vol/404.html
@@ -1,4 +1,4 @@
-{% extends 'vol/base.html' %}
+{% extends 'vol/base_homepage.html' %}
 {% block title %} Erreur {% endblock %}
 {% block content %}
 
