--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -1,4 +1,4 @@
-{% extends 'vol/base.html' %}
+{% extends 'vol/base_homepage.html' %}
 {% block title %} Détails du vol {% endblock %}
 {% block content %}
 {% load widget_tweaks %}
