--- a/vol/templates/vol/iata_add.html
+++ b/vol/templates/vol/iata_add.html
@@ -1,4 +1,4 @@
-{% extends 'vol/base.html' %}
+{% extends 'vol/base_homepage.html' %}
 {% block title %} Nouveau code IATA {% endblock %}
 {% block content %}
 <div class="row">
