--- a/vol/templates/vol/somme.html
+++ b/vol/templates/vol/somme.html
@@ -1,4 +1,4 @@
-{% extends 'vol/base.html' %}
+{% extends 'vol/base_homepage.html' %}
 {% block title %} Sommes {% endblock %}
 {% block content %}
     <div class="container">
