--- a/vol/templates/vol/type_avion_add.html
+++ b/vol/templates/vol/type_avion_add.html
@@ -1,4 +1,4 @@
-{% extends 'vol/base.html' %}
+{% extends 'vol/base_homepage.html' %}
 {% block title %} Nouveau type d'avion {% endblock %}
 {% block content %}
 
