--- a/vol/templates/vol/detail.html
+++ b/vol/templates/vol/detail.html
@@ -3,23 +3,33 @@
 {% block content %}
 {% load widget_tweaks %}
 
-        <div class="row">
-            <div class="col-md-12"><h2 class="display-4 mt-4 mb-4">Détails du vol</h2></div>
-        </div>
-        <div class="row">
-            <div class="col-auto mr-auto">
-                <a class="btn btn-outline-primary management_links" data-toggle="tooltip" data-placement="top" title="Modifier le vol" href="{% url 'edit_vol' pk=vol.pk %}"><i class="fas fa-pencil-alt"></i></a>
-            </div>
-            <div class="col-auto">
-                <form action="{% url 'remove_vol' pk=vol.pk %}" method="post" style="display: inline;">
-                    {% csrf_token %}
-                    <input type="hidden" name="immatriculation_id" value="{{ vol.id }}" />
-                    <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le vol" onclick="return confirm('Are you sure you want to delete this?')">
-                        <button type="submit" class="btn btn-outline-danger"><i class="far fa-trash-alt"></i></button>
-                    </a>
-                </form>
-            </div>
-        </div>
+{% block active_secondary_nav %} {% endblock %}
+
+
+<div class="row">
+    <div class="col-md-12"><h2 class="display-4 mt-4 mb-4"> <a class="management_links text-dark" data-toggle="tooltip" data-placement="top" title="Retour à la liste des vols" href="{% url 'index' %}">
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             width="64px" height="64px" viewBox="0 0 64 64" enable-background="new 0 0 64 64" xml:space="preserve">
+        <g>
+            <polyline fill="none" stroke="#000000" stroke-width="2" stroke-linejoin="bevel" stroke-miterlimit="10" points="37,15 20,32 
+                37,49   "/>
+        </g>
+        </svg></a>| Détails du vol</h2></div>
+</div>
+<div class="row">
+    <div class="col-auto mr-auto">
+        <a class="btn btn-outline-primary management_links" data-toggle="tooltip" data-placement="top" title="Modifier le vol" href="{% url 'edit_vol' pk=vol.pk %}"><i class="fas fa-pencil-alt"></i></a>
+    </div>
+    <div class="col-auto">
+        <form action="{% url 'remove_vol' pk=vol.pk %}" method="post" style="display: inline;">
+            {% csrf_token %}
+            <input type="hidden" name="immatriculation_id" value="{{ vol.id }}" />
+            <a class="text-danger management_links" data-toggle="tooltip" data-placement="top" title="Supprimer le vol" onclick="return confirm('Are you sure you want to delete this?')">
+                <button type="submit" class="btn btn-outline-danger"><i class="far fa-trash-alt"></i></button>
+            </a>
+        </form>
+    </div>
+</div>
 
 <hr>
 
