uniformisation du header

--- a/vol/templates/registration/logged_out.html
+++ b/vol/templates/registration/logged_out.html
@@ -1,5 +1,6 @@
 {% extends "vol/base_homepage.html" %}
 
+{% block active_secondary_nav %}{% endblock %}
 {% block content %}
 
 <div class="col-6 offset-md-3">
