--- a/vol/templates/registration/password_change_form.html
+++ b/vol/templates/registration/password_change_form.html
@@ -1,5 +1,5 @@
 {% extends "vol/base_homepage.html" %}
-
+{% block active_secondary_nav %}{% endblock %}
 {% block content %}
 
 <h1>Réinitialisation du mot de passe</h1>
