--- a/vol/templates/registration/password_reset_complete.html
+++ b/vol/templates/registration/password_reset_complete.html
@@ -1,5 +1,5 @@
 {% extends "vol/base_homepage.html" %}
-
+{% block active_secondary_nav %}{% endblock %}
 {% block content %}
   <h1>The password has been changed!</h1>
   <p><a href="{% url 'login' %}">log in again?</a></p>
