--- a/vol/templates/registration/password_reset_confirm.html
+++ b/vol/templates/registration/password_reset_confirm.html
@@ -1,5 +1,5 @@
 {% extends "vol/base_homepage.html" %}
-
+{% block active_secondary_nav %}{% endblock %}
 {% block content %}
     {% if validlink %}
         <p>Please enter (and confirm) your new password.</p>
