--- a/vol/templates/registration/password_reset_form.html
+++ b/vol/templates/registration/password_reset_form.html
@@ -1,5 +1,5 @@
 {% extends "vol/base_homepage.html" %}
-
+{% block active_secondary_nav %}{% endblock %}
 {% block content %}
   <form action="" method="post">
   {% csrf_token %}
