--- a/vol/templates/vol/base_homepage.html
+++ b/vol/templates/vol/base_homepage.html
@@ -56,19 +56,23 @@
                         <a class="nav-link" href="{% url 'index' %}">Vol</a>
                     </li>
                 </ul>
+                <span class="navbar-text">
+                    Bonjour {{ user.username }}
+                </span>
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'profile' user %}"><button type="button" class="btn btn-outline-light btn-sm">Profil</button></a>
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    Bonjour {{ user.username }}
                     <a href="{% url 'logout' %}"><button type="button" class="btn btn-outline-secondary btn-sm">Déconnexion</button></a>
+                </span>
                     {% else %}
                 <span class="navbar-text">
                     <a href="{% url 'login' %}"><button type="button" class="btn btn-outline-secondary btn-sm">Connexion</button></a>
-                    {% endif %}
                 </span>
+                    {% endif %}
+                
             </div>
         </nav>
 
