--- a/vol/templates/vol/documentation.html
+++ b/vol/templates/vol/documentation.html
@@ -11,11 +11,9 @@
 {% block active_secondary_nav %}{% endblock %}
 {% block content %}
 
-    <div class="row">
-        <div class="col-md-6 offset-3">
-            <h1>Documentation</h1>
-        </div>
-    </div>
+<div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Documentation</h1>
+</div>
 
     <div class="row">
         <div class="col-md-6 offset-3">
