--- a/vol/templates/vol/homepage.html
+++ b/vol/templates/vol/homepage.html
@@ -2,12 +2,10 @@
 {% block active_secondary_nav %}{% endblock %}
 {% block content %}
 
-    <div class="row">
-        <div class="col-md-6 offset-md-3">
-            <h1>Base de données de vol.</h1>
-        </div>
-        
-    </div>
+<div class="px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
+    <h1 class="display-4">Base de données de vol</h1>
+</div>
+
     <div class="row">
         <div class="col-md-6 offset-md-3">
             <p>Cette application vous permettra de saisir et sauvegarder vos heures de vol de manière simple et sécurisée.</p>
