fixed #26: doubles points s'affichent

--- a/vol/templates/vol/vol_add.html
+++ b/vol/templates/vol/vol_add.html
@@ -211,7 +211,7 @@
                                 <div class="fieldWrapper">
                                     {{ form.duree_simu.errors }}
                                     {{ form.duree_simu.label_tag }}
-                                    {{ form.duree_simu|add_class:"form-control" }}
+                                    {{ form.duree_simu|add_class:"form-control durationpicker" }}
                                 </div>
                             </div>
                             <div class="form-group col-md-4">
@@ -245,7 +245,7 @@
                                 <div class="fieldWrapper">
                                     {{ form.duree_ifr.errors }}
                                     {{ form.duree_ifr.label_tag }}
-                                    {{ form.duree_ifr|add_class:"form-control" }}
+                                    {{ form.duree_ifr|add_class:"form-control durationpicker" }}
                                 </div>
                             </div>
                             <div class="form-group col-md-4">
@@ -281,7 +281,7 @@
                                 <div class="fieldWrapper">
                                     {{ form.duree_dc.errors }}
                                     {{ form.duree_dc.label_tag }}
-                                    {{ form.duree_dc|add_class:"form-control" }}
+                                    {{ form.duree_dc|add_class:"form-control durationpicker" }}
                                 </div>
                             </div>
                             <div class="form-group col-md-4">
