Color change of the information box

--- a/vol/templates/vol/immatriculation_add.html
+++ b/vol/templates/vol/immatriculation_add.html
@@ -46,7 +46,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <div class="alert alert-danger" role="alert">
+            <div class="alert alert-warning" role="alert">
                 Il est impossible de supprimer un avion lié à un vol. Afin de supprimer un avion, il faut en premier lieu supprimer ou modifier le ou les vols liés.
             </div>
         </div>
