--- a/vol/templates/vol/type_avion_add.html
+++ b/vol/templates/vol/type_avion_add.html
@@ -39,7 +39,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <div class="alert alert-danger" role="alert">
+            <div class="alert alert-warning" role="alert">
                 Il est impossible de supprimer un type d'avion lié à un avion. Afin de supprimer un type d'avion, il faut en premier lieu supprimer ou modifier le ou les avions liés.
             </div>
         </div>
