--- a/vol/templates/vol/iata_add.html
+++ b/vol/templates/vol/iata_add.html
@@ -37,7 +37,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <div class="alert alert-danger" role="alert">
+            <div class="alert alert-warning" role="alert">
                 Il est impossible de supprimer un aéroport lié à un vol. Afin de supprimer un aéroport, il faut en premier lieu supprimer ou modifier le ou les vols liés.
             </div>
         </div>
