--- a/vol/templates/vol/pilote_add.html
+++ b/vol/templates/vol/pilote_add.html
@@ -38,7 +38,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <div class="alert alert-danger" role="alert">
+            <div class="alert alert-warning" role="alert">
                 Il est impossible de supprimer un pilote lié à un vol. Afin de supprimer un pilote, il faut en premier lieu supprimer ou modifier le ou les vols liés.
             </div>
         </div>
